--- a/nodes/mam/fetch_mam.html
+++ b/nodes/mam/fetch_mam.html
@@ -34,12 +34,16 @@
         <label for="node-input-secret">MAM secret key (restricted mode) </label>
         <input type="text" id="node-input-secret"/>
     </div>
-        <div class="form-row">
+    <div class="form-row">
         <label for="node-input-limit">MAM fetch limit</label>
         <input type="text" id="node-input-limit"/>
     </div>
 </script>
 
 <script type="text/html" data-help-name="MAM fetch">
-    <p>MAM fetch node</p>
+    <p>
+        Fetches the data from an address in the tangle network. The address is received from the input message payload. 
+        It returns the previously published messages in JSON from the address (number is defined by limit property) in the payload of the output message. 
+        The messages have timestamp in Unix epoch.
+    </p>
 </script>
