--- a/nodes/mam/publish_mam.html
+++ b/nodes/mam/publish_mam.html
@@ -5,7 +5,10 @@
     defaults: {
       iotaNode: { value: "https://nodes.comnet.thetangle.org:443" },
       mode: { value: 'public' },
-      secretKey: { value: null }
+      secret: { value: null },
+      mwm: { value: 10 },
+      depth: { value: 3 },
+      tag: { tag: null }
     },
     inputs: 1,
     outputs: 1,
@@ -33,8 +36,23 @@
       <label for="node-input-secret">MAM secret key (restricted mode) </label>
       <input type="text" id="node-input-secret"/>
     </div>
+    <div class="form-row">
+      <label for="node-input-mwm">Minimum Weight Magnitude</label>
+      <input type="number" id="node-input-mwm"/>
+    </div>
+    <div class="form-row">
+      <label for="node-input-depth">Depth</label>
+      <input type="number" id="node-input-depth"/>
+    </div>
+    <div class="form-row">
+      <label for="node-input-tag">Tag</label>
+      <input type="text" id="node-input-tag"/>
+    </div>
 </script>
 
 <script type="text/html" data-help-name="MAM publish">
-    <p>MAM publish node</p>
+    <p>
+      Publishes the input message payload in JSON to a randomly generated address on the tangle network. 
+      Returns the message with the generated address in the payload.
+    </p>
 </script>
